// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`RadioGroup rendering renders expected elements 1`] = `
<div
  className="RadioGroup TestClass"
  id="random-id"
  onKeyDown={[Function]}
  role="radiogroup"
>
  <RadioButton
    checked={true}
    id="random-id-foo"
    label="FOO"
    onChange={[Function]}
    tabIndex={0}
    value="foo"
  />
  <RadioButton
    checked={false}
    id="random-id-bar"
    label="BAR"
    onChange={[Function]}
    tabIndex={-1}
    value="bar"
  />
  <RadioButton
    checked={false}
    id="random-id-baz"
    label="BAZ"
    onChange={[Function]}
    tabIndex={-1}
    value="baz"
  />
</div>
`;

exports[`RadioGroup rendering renders expected elements when className is not set 1`] = `
<div
  className="RadioGroup"
  id="random-id"
  onKeyDown={[Function]}
  role="radiogroup"
>
  <RadioButton
    checked={true}
    id="random-id-foo"
    label="FOO"
    onChange={[Function]}
    tabIndex={0}
    value="foo"
  />
  <RadioButton
    checked={false}
    id="random-id-bar"
    label="BAR"
    onChange={[Function]}
    tabIndex={-1}
    value="bar"
  />
  <RadioButton
    checked={false}
    id="random-id-baz"
    label="BAZ"
    onChange={[Function]}
    tabIndex={-1}
    value="baz"
  />
</div>
`;
